--- a/docs/三、代码结构.md
+++ b/docs/三、代码结构.md
@@ -8,13 +8,18 @@ oneNew
 │   ├── nn_common.h         # one 模型、数据类型的声明、算子的 config 结构体声明
 │   ├── utils_c.h           # 常用的 C 风格函数声明和实现
 │   └── utils_cpp.hpp       # 常用的 CPP 风格函数声明和实现
+├── configs                 # 在使用 oneNew 框架，会用到的配置信息
+│   ├── metrics_cfgs  # 在使用 tools/metrics 来测试模型的精度时的配置信息示例
+│   ├── rt_cfgs       # 在使用 example 来做模型推理时，会使用到的配置信息示例
+│   ├── samples       # metrics_cfgs 和 rt_cfgs 配置信息中每个参数的含义示例
+│   └── tracing_cfgs  # 在 rt_cfgs 中，想做 tracing 来寻找性能瓶颈，会使用到的配置信息示例
 ├── device                  # dev 侧的算子实现
 │   ├── cuda
 │   ├── x86
 │   └── x86_utils
 ├── docs                    # oneNew 开发和使用文档详述
-│   ├── imgs                # md 文档中必要的插入图片
-│   └── md
+│   ├── imgs          # md 文档中必要的插入图片
+│   └── md            # 整个框架必要的 readme 补充
 ├── example                 # 模型推理的主程序
 │   ├── CLIP_model.h        # 图文互搜模型 CLIP 应用
 │   ├── CMakeLists.txt
@@ -29,16 +34,13 @@ oneNew
 │   ├── ops                 # 算子的实现目录
 │   └── ops_head.h
 ├── imgs                    # 测试所用图片
-│   └── src_img
-├── model_and_cfg_zoo
-│   └── configs
+│   ├── src_img
+│   └── imageNet_label.txt    # imageNet 5 万张图片的标签。用于做精度测试
+├── model_zoo               # 推荐用户将 onnx 或者 one 模型文件放到该路径下
 ├── README.md               # 开发使用指南
 ├── test
 │   ├── model_daily_test    # 集成测试，包括所有已支持模型的自测
-│   ├── model_self_test_with_ort    # 使用 onnx runtime 生成 golden data，新适配 onx 模型时进行数据正确性对比
-│   ├── op_self_test
-│   ├── show_seg_pose_result
-│   └── test_clip_model.py
+│   └── model_self_test_with_ort    # 使用 onnx runtime 生成 golden data，新适配 onx 模型时进行数据正确性对比
 └── tools                   # 常用工具集合
     ├── metrics             # 分类模型的精度测试
     ├── onnx2one            # 支持 onnx ---> one 模型的转换
