--- a/docs/七、新增模型适配步骤.md
+++ b/docs/七、新增模型适配步骤.md
@@ -1,3 +1,5 @@
+TODO：  
+
 ### 7.1 模型转换
 参考 9.2 节，将 onnx 转为 one 格式的模型，并且查看是否有 LOG ERR 报错，一般是查看是否有不支持的算子
 
@@ -5,14 +7,19 @@
 **增加 config；增加 host 侧的类管理和算子注册；增加 dev 侧的 forward 实现**
 
 ### 7.3 适配新的模型
-在完成 8 算子新增后，自动完成新模型的适配
+在完成 8 算子新增后，自动完成新模型的适配  
+
 ### 7.4 调试模型正确性
-参考 8.2 节，使用 ofmap dump 模式。把 onnxruntime 拿来对照，看哪个节点卡住或者相似度低
+参考 8.2 节，使用 ofmap dump 模式。把 onnxruntime 拿来对照，看哪个节点卡住或者相似度低  
+
 ### 7.5 性能调优
 参考 9.4 节，结果正确后，使用性能模式，dump 出每个 layer 的性能数据，看哪类 op 或者哪个 layer 利用率较低，进行优化
-参考 9.3 节，如果有需要，通过 optimize 来量化模型或者做算子融合
+参考 9.3 节，如果有需要，通过 optimize 来量化模型或者做算子融合  
+
 ### 7.6 添加后处理
-性能优化结束后，为模型增加有必要的后处理（例如分类，目标识别等）
+性能优化结束后，为模型增加有必要的后处理（例如分类，目标识别等）  
+
 ### 7.7 将模型加入集成测试
-参考 8.1 节将模型加入 ci 测试
+参考 8.1 节将模型加入 ci 测试  
+
 ### 7.8 完成新模型的适配工作
