Standardize abs path

--- a/docs/四、代码编译.md
+++ b/docs/四、代码编译.md
@@ -1,8 +1,8 @@
 代码编译及日志等级设置
 ### 4.1 编译 debug 版本  
 ```shell {.line-numbers}
-mkdir a_dbg_build
-cd a_dbg_build
+mkdir build
+cd build
 cmake ..
 make
 ```
@@ -10,8 +10,8 @@ debug 版本没有任何优化，并支持断点调试
 
 ### 4.2 编译 release 版本
 ```shell {.line-numbers}
-mkdir a_rls_build
-cd a_rls_build
+mkdir build
+cd build
 cmake .. -DCMAKE_BUILD_TYPE=Release
 make
 ```
@@ -19,8 +19,8 @@ release 版本采用 O3 优化，不支持断点调试
 
 ### 4.3 编译最佳性能版本
 ```shell {.line-numbers}
-mkdir a_final_build
-cd a_final_build
+mkdir build
+cd build
 cmake .. -DCMAKE_BUILD_TYPE=Release -DLOG_LEV=0
 make
 ```
@@ -28,8 +28,8 @@ make
 
 ### 4.4 如果想编译非 8 线程的 x86 版本，或者编译 cuda 版本，请如下配置 CMAKE 编译选项
 ```shell {.line-numbers}
-mkdir a_other_build
-cd a_other_build
+mkdir build
+cd build
 cmake .. -DTHREADS_NUM=4 -DUSING_GPU=1
 make
 ```
