--- a/docs/七、新增模型适配步骤.md
+++ b/docs/七、新增模型适配步骤.md
@@ -3,7 +3,7 @@
 
 ### 7.2 用户新增自定义算子
 假设需要新增的算子为 Foo  
-**a、增加 config；增加 host 侧的类管理和算子注册；增加 dev 侧的 forward 实现**  
+**a、增加 config**  
 在 /oneNew/common/nn_common.h 中，参照 CONV_CONFIG_S 等结构体形式，为 Foo 算子增加一个 config 为 FOO_CONFIG_S  
 **b、增加 ONNX 的 IR 向 config 转换的实现**  
 在 oneNew/tools/onnx2one/onnx2one.cpp 中，搜索 “if (op_type == "Conv")” 代码，在附近位置，增加一个 "else if (op_type == "Foo")" 的转换。（如果 Foo 算子除了输入、输出 tensor 外，没有其余的属性，则可以不增加都可，因为 tensor 这类的公共属性，会被统一处理）  
