--- a/docs/七、新增模型适配步骤.md
+++ b/docs/七、新增模型适配步骤.md
@@ -6,13 +6,13 @@
 **a、增加 config**  
 在 /oneNew/common/nn_common.h 中，参照 CONV_CONFIG_S 等结构体形式，为 Foo 算子增加一个 config 为 FOO_CONFIG_S  
 **b、增加 ONNX 的 IR 向 config 转换的实现**  
-在 oneNew/tools/onnx2one/onnx2one.cpp 中，搜索 “if (op_type == "Conv")” 代码，在附近位置，增加一个 "else if (op_type == "Foo")" 的转换。（如果 Foo 算子除了输入、输出 tensor 外，没有其余的属性，则可以不增加都可，因为 tensor 这类的公共属性，会被统一处理）  
+在 oneNew/tools/onnx2one/onnx2one.cpp 中，搜索 “if (op_type == "Conv")” 代码，在附近位置，增加一个 "else if (op_type == "Foo")" 的转换。（如果 Foo 算子除了输入、输出 tensor 外，没有其余的属性，则可以不增加此处操作，因为 tensor 这类的公共属性，会被统一处理）  
 **c、增加 host 侧的类管理和算子注册**   
 参考 oneNew/host/ops/conv.h，在同级目录下，新建一个 foo.h 文件，并且在该文件中，完成 create_instance、shape_infer 等多个成员函数实现。同时，在最下方，通过 OP_REGISTER_GLOBAL 宏，将 Foo 算子注册到 Manager 单例中。  
 **d、增加 dev 侧的 forward 实现**  
 参考 oneNew/device/x86/Conv 文件夹，完成 Foo 算子的具体实现过程，这个就是读取 FOO_CONFIG_S 和输入输出 tensor 描述以及指针。直接计算即可。
 ### 7.3 适配新的模型
-在完成 8 算子新增后，自动完成新模型的编译适配，后续就是需要去保证模型的正确性。  
+在完成 7.2 节算子新增后，自动完成新模型的编译适配，后续就是需要去保证模型的正确性。  
 
 ### 7.4 调试模型正确性
 参考 8.2 节，使用 model_exc_type: ofmap_dumping 模式。把 one new 推理的中间层输出都 dump 到指定位置，然后用 python 跑 onnxruntime，逐层对比数据的准确性，看哪个节点卡住或者相似度低。  
